--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 *{
-    margin: 0px
+    margin: 0px;
     padding: 0px;
 }
 body{
     background-color: rgb(253, 251, 251);
 }
 #cabecalho{
-    
+    margin-top: 0;
+    background-color: green;
 }
