--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ body{
 #cabecalho{
     margin-top: 0;
     background-color: green;
-   /* position: fixed; */
+    position: fixed;
+    width: 100%;
+    height: 50px;
 }
 #titulo{
  text-align: center;
