--- a/style.css
+++ b/style.css
@@ -1,24 +1,29 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
-body{
+
+body {
     background-color: rgb(253, 251, 251);
 }
-#cabecalho{
+
+#cabecalho {
     margin-top: 0;
     background-color: green;
     position: fixed;
     width: 100%;
     height: 50px;
 }
-#titulo{
- text-align: center;
-    
+
+#titulo {
+    text-align: center;
+    color: white;
 }
-#licoes_a_aprender{
+
+#licoes_a_aprender {
     margin: 25px;
 }
-#licoes_aprendidas{
+
+#licoes_aprendidas {
     margin: 25px;
 }
