--- a/style.css
+++ b/style.css
@@ -8,11 +8,21 @@ body {
 }
 
 #cabecalho {
-  margin-top: 0;
-  background-color: green;
+  margin-top: 0px;
+  background-color: #003049;
   position: fixed;
   width: 100%;
-  height: 50px;
+  z-index: 10;
+}
+
+#tudo {
+  margin-left: 3%;
+  margin-right: 3%;
+  position: relative;
+  top: 50px;
+  background-color: #eae2b7;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 #titulo {
@@ -26,4 +36,24 @@ body {
 
 #licoes_aprendidas {
   margin: 25px;
+}
+
+#rodape {
+  position: relative;
+  background-color: #003049;
+  color: white;
+  text-align: center;
+  height: 100px;
+  margin-top: 50px;
+}
+
+.siga-me {
+  display: block;
+  font-weight: bold;
+}
+
+.redes-sociais {
+  display: inline-block;
+  margin-right: 5px;
+  margin-top: 20px;
 }
