Formatando todo o corpo

--- a/style.css
+++ b/style.css
@@ -18,11 +18,34 @@ body {
 #tudo {
   margin-left: 3%;
   margin-right: 3%;
-  position: relative;
+  position: absolute;
   top: 50px;
   background-color: #eae2b7;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  z-index: 1;
+}
+
+#primeiro-bloco{
+ position: absolute;
+ background-color: #fcbf49;
+ border-radius: 5px;
+ margin: 10px 10px 10px 10px ;
+ width: 98.5%;
+ z-index: 2;
+}
+
+#imagem {
+ display: inline-block;
+ margin: 10px 10px 10px 10px;
+}
+
+#minha-foto{
+border-radius: 5px;
+}
+
+#sobre-mim{
+ display: inline-block;
 }
 
 #titulo {
@@ -39,12 +62,14 @@ body {
 }
 
 #rodape {
-  position: relative;
+  position: absolute;
   background-color: #003049;
   color: white;
   text-align: center;
   height: 100px;
-  margin-top: 50px;
+  margin-top: 584px;
+  z-index: 3;
+  width: 100%;
 }
 
 .siga-me {
