--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: rgb(253, 251, 251);
+  position: relative;
 }
 
 #cabecalho {
@@ -18,21 +19,19 @@ body {
 #tudo {
   margin-left: 3%;
   margin-right: 3%;
-  position: absolute;
+  position: relative;
   top: 50px;
   background-color: #eae2b7;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  z-index: 1;
 }
 
 #primeiro-bloco{
- position: absolute;
+ position: relative;
  background-color: #fcbf49;
  border-radius: 5px;
- margin: 10px 10px 10px 10px ;
+ margin: 0px 10px 10px 10px ;
  width: 98.5%;
- z-index: 2;
 }
 
 #imagem {
@@ -44,8 +43,14 @@ body {
 border-radius: 5px;
 }
 
+#nome{
+ display: block;
+ text-align: center;
+ width: 100px;
+}
+
 #sobre-mim{
- display: inline-block;
+ display: block;
 }
 
 #titulo {
@@ -62,13 +67,12 @@ border-radius: 5px;
 }
 
 #rodape {
-  position: absolute;
+  position: relative;
   background-color: #003049;
   color: white;
   text-align: center;
   height: 100px;
-  margin-top: 584px;
-  z-index: 3;
+  margin-top: 50px;
   width: 100%;
 }
 
