--- a/style.css
+++ b/style.css
@@ -7,20 +7,26 @@ body {
   background-color: rgb(253, 251, 251);
   position: relative;
 }
-
+/*--------------------------------------*/
 #cabecalho {
   margin-top: 0px;
   background-color: #003049;
   position: fixed;
   width: 100%;
   z-index: 10;
+  font-family: 'Playfair Display', serif;
 }
 
+#titulo {
+  text-align: center;
+  color: white;
+}
+/*--------------------------------------*/
 #tudo {
   margin-left: 3%;
   margin-right: 3%;
   position: relative;
-  top: 50px;
+  top: 60px;
   background-color: #eae2b7;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -47,16 +53,18 @@ body {
 #sobre-mim {
   display: inline-block;
   margin-bottom: 1px;
+  line-height: 20px;
 }
 
-#sobre-mim h1{
- font-weight: bold;
- font-size: 100px;
+#sobre-mim h1 {
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 1em;
+  margin-bottom: 5px;
 }
-
-#titulo {
-  text-align: center;
-  color: white;
+/*--------------------------------------*/
+#listas{
+  display: inline-block;
 }
 
 #licoes_a_aprender {
@@ -67,13 +75,30 @@ body {
   margin: 25px;
 }
 
+#aprendi {
+  float: left;
+  margin-left: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  background-color: #fcbf49;
+}
+#aprendi h2{
+ margin: 3px 3px 0px 3px;
+}
+
+#nao-aprendi {
+  float: right;
+  margin-left: 599px;
+
+}
+/*--------------------------------------*/
 #rodape {
   position: relative;
   background-color: #003049;
   color: white;
   text-align: center;
   height: 100px;
-  margin-top: 50px;
+  margin-top: 60px;
   width: 100%;
 }
 
