--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -8,14 +8,14 @@ body {
   position: relative;
 }
 
-/*--------------------------------------*/
+/* -------------------------------------- */
 #cabecalho {
-  margin-top: 0px;
-  background-color: #003049;
+  margin-top: 0;
+  background-color: rgb(0, 48, 73);
   position: fixed;
   width: 100%;
   z-index: 10;
-  font-family: 'Playfair Display', serif;
+  font-family: ' Playfair Display', serif;
 }
 
 #titulo {
@@ -23,13 +23,13 @@ body {
   color: white;
 }
 
-/*--------------------------------------*/
+/* -------------------------------------- */
 #tudo {
   margin-left: 3%;
   margin-right: 3%;
   position: relative;
   top: 60px;
-  background-color: #eae2b7;
+  background-color: rgb(234, 226, 183);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   padding-top: 10px;
@@ -37,15 +37,15 @@ body {
 
 #primeiro-bloco {
   position: relative;
-  background-color: #fcbf49;
+  background-color: rgb(252, 191, 73);
   border-radius: 5px;
-  margin: 0px 10px 10px 10px;
+  margin: 0 10px 10px;
   width: 98.5%;
 }
 
 #imagem {
   display: inline-block;
-  margin: 10px 10px 10px 10px;
+  margin: 10px;
 }
 
 #minha_foto {
@@ -59,13 +59,13 @@ body {
 }
 
 #sobre-mim h1 {
-  font-weight: bold;
+  font-weight: 900;
   font-size: 100px;
   line-height: 1em;
   margin-bottom: 5px;
 }
 
-/*--------------------------------------*/
+/* -------------------------------------- */
 #listas {
   display: inline-block;
 }
@@ -83,9 +83,8 @@ body {
   margin-left: 10px;
   border-bottom-left-radius: 5px;
   border-top-left-radius: 5px;
-  background-color: #003049;
+  background-color: rgb(0, 48, 73);
   color: white;
-  /*margin-right: 368px; */
   padding-right: 287px;
 }
 
@@ -98,9 +97,8 @@ body {
   margin-right: 10px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
-  background-color: #003049;
+  background-color: rgb(0, 48, 73);
   color: white;
-  /*margin-left: 368px;*/
   padding-left: 288px;
 }
 
@@ -108,7 +106,7 @@ body {
   margin: 5px;
 }
 
-/*--------------------------------------*/
+/* -------------------------------------- */
 .conteudo {
   margin-left: 15px;
 }
@@ -138,9 +136,9 @@ body {
   margin-right: 10px;
 }
 
-/*--------------------------------------*/
+/* -------------------------------------- */
 #sessao-tabela h1 {
-  margin: 10px 0px 10px 15px;
+  margin: 10px 0 10px 15px;
 }
 
 #tabela {
@@ -149,14 +147,14 @@ body {
   margin-bottom: 20px;
 }
 
-table, th, td {
+table , th , td {
   border: 1px solid black;
 }
 
-/*--------------------------------------*/
+/* -------------------------------------- */
 #rodape {
   position: relative;
-  background-color: #003049;
+  background-color: rgb(0, 48, 73);
   color: white;
   text-align: center;
   height: 100px;
@@ -166,7 +164,7 @@ table, th, td {
 
 .siga-me {
   display: block;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .redes-sociais {
