--- a/style.css
+++ b/style.css
@@ -5,12 +5,11 @@
 
 body {
   background-color: rgb(253, 251, 251);
-  position: relative;
 }
 
 /* -------------------------------------- */
 #cabecalho {
-  margin-top: 0;
+  top: 0;
   background-color: rgb(0, 48, 73);
   position: fixed;
   width: 100%;
@@ -25,27 +24,31 @@ body {
 
 /* -------------------------------------- */
 #tudo {
-  margin-left: 3%;
-  margin-right: 3%;
-  position: relative;
-  top: 60px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 70px;
+  width: 90%;
   background-color: rgb(234, 226, 183);
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  padding-top: 10px;
+  padding: 10px;
 }
 
 #primeiro-bloco {
-  position: relative;
+  display: flex;
+  align-items: flex-end;
+  padding: 10px;
   background-color: rgb(252, 191, 73);
   border-radius: 5px;
-  margin: 0 10px 10px;
-  width: 98.5%;
+  width: 98%;
+  margin: auto;
+  margin-bottom: 10px;
 }
 
 #imagem {
   display: inline-block;
-  margin: 10px;
+  margin-right: 10px;
 }
 
 #minha_foto {
@@ -67,73 +70,72 @@ body {
 
 /* -------------------------------------- */
 #listas {
-  display: inline-block;
-}
-
-#licoes_a_aprender {
-  margin: 25px;
-}
-
-#licoes_aprendidas {
-  margin: 25px 25px 25px 40px;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  width: 100%;
 }
 
 #aprendi {
-  float: left;
-  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
   border-bottom-left-radius: 5px;
   border-top-left-radius: 5px;
   background-color: rgb(0, 48, 73);
   color: white;
-  padding-right: 287px;
+  width: 50%;
 }
 
-#aprendi h2 {
-  margin: 5px;
+#aprendi ol {
+  margin-left: 25px;
 }
 
 #nao-aprendi {
-  float: right;
-  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   background-color: rgb(0, 48, 73);
   color: white;
-  padding-left: 288px;
+  width: 50%;
 }
 
-#nao-aprendi h2 {
-  margin: 5px;
+#nao-aprendi ul {
+  margin-left: 25px;
 }
 
 /* -------------------------------------- */
 .conteudo {
-  margin-left: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  width: 98%;
+  margin: auto;
+  margin-top: 10px;
+}
+
+.coteudo-title {
+  text-align: center;
+  width: 100%;
 }
 
 .lado-esquerdo {
-  width: 40%;
-  margin-left: 10px;
-  margin-top: 10px;
-  float: left;
-  padding-right: 105px;
+  width: 48%;
+  padding: 10px;
   border-right: 1px solid black;
-
 }
 
 .lado-direito {
-  width: 40%;
-  margin-right: 10px;
-  margin-top: 10px;
-  float: right;
-  padding-left: 115px;
-
+  padding: 10px;
+  width: 48%;
+  text-align: end;
 }
 
 .segurador {
-  margin-top: 95px;
-  margin-left: 10px;
-  margin-right: 10px;
+  padding: 10px;
+  width: 100%;
 }
 
 /* -------------------------------------- */
@@ -158,7 +160,6 @@ table , th , td {
   color: white;
   text-align: center;
   height: 100px;
-  margin-top: 60px;
   width: 100%;
 }
 
