--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -112,6 +113,7 @@ body {
   flex-wrap: wrap;
   padding: 10px;
   width: 98%;
+  justify-content: space-between;
   margin: auto;
   margin-top: 10px;
 }
@@ -122,7 +124,7 @@ body {
 }
 
 .lado-esquerdo {
-  width: 48%;
+  width: 48.5%;
   padding: 10px;
   border-right: 1px solid black;
 }
@@ -147,10 +149,12 @@ body {
   margin-left: 30px;
   display: inline-block;
   margin-bottom: 20px;
+  width: 40%;
 }
 
 table , th , td {
   border: 1px solid black;
+  width: 100%;
 }
 
 /* -------------------------------------- */
